# ableton-live-mcp

./: .gitignore  AGENTS.md  LICENSE  README.md  SKILL.md  pyproject.toml
Ableton_Live_MCP/: bridge.py
m4l/: AgentAudioTap.amxd  AgentAudioTap.maxpat  README.md  agent_audio_tap.js  agent_m4l_host.js
remote_scripts/AbletonMCP/: bridge.py
remote_scripts/Ableton_Object_MCP/: __init__.py  bridge.py
scripts/: ableton_similar_sounds.py  build_agent_audio_tap.py  build_agent_m4l_device.py
src/: ableton_paths.py  agent_m4l.py  benchmark.py  bridge.py  install_remote_script.py  mcp.py  mcp_stdio.py  prompt_audit.py  server.py  similar_sounds.py  smoke.py  validate.py  visual_capture.py
src/ableton_live_mcp/: benchmark.py  debug.py  install_remote_script.py  prompt_audit.py  server.py  smoke.py  validate.py
src/ableton_object_mcp/: __init__.py  benchmark.py  bridge.py  install_remote_script.py  mcp.py  prompt_audit.py  server.py  smoke.py  validate.py
tests/: test_ableton_paths.py  test_agent_audio_tap_build.py  test_agent_m4l_build.py  test_mcp_server.py  test_remote_bridge_fake_live.py  test_visual_capture.py
