[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ableton-object-mcp"
version = "0.1.0"
description = "General-purpose MCP bridge for Ableton Live's object model."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Codex" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ableton-object-mcp = "ableton_object_mcp.server:main"
ableton-object-mcp-validate = "ableton_object_mcp.validate:main"
ableton-object-mcp-smoke = "ableton_object_mcp.smoke:main"
ableton-object-mcp-install-remote-script = "ableton_object_mcp.install_remote_script:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/ableton_object_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"remote_scripts/Ableton_Object_MCP" = "ableton_object_mcp/remote_scripts/Ableton_Object_MCP"
"remote_scripts/AbletonMCP" = "ableton_object_mcp/remote_scripts/AbletonMCP"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/remote_scripts",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
