[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ableton-live-mcp"
version = "0.1.0"
description = "General-purpose MCP bridge for Ableton Live's object model."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Codex" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
debug = ["pytest>=8.0"]

[project.scripts]
ableton-live-mcp = "server:main"
ableton-live-mcp-validate = "validate:main"
ableton-live-mcp-install-remote-script = "install_remote_script:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"Ableton_Live_MCP" = "Ableton_Live_MCP"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/Ableton_Live_MCP",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
